--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Albin Mattsson <albin.mattsson@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
     "coveralls": "^2.11.6",
     "istanbul": "^0.4.2",
     "mocha": "^2.4.5",
