docs: Add commitizen and dependency up-to-date badges to readme.
Init commitizen for the repo and add it's badge to the README. Also add dependency up-to-date
badges.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "coveralls": "^2.11.6",
+    "cz-conventional-changelog": "^1.1.5",
     "istanbul": "^0.4.2",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.1.0",
@@ -36,5 +37,10 @@
   "bugs": {
     "url": "https://github.com/cstruct/jspath-cli/issues"
   },
-  "homepage": "https://github.com/cstruct/jspath-cli#readme"
+  "homepage": "https://github.com/cstruct/jspath-cli#readme",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
